# Abstract-Shader-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.c  main.cpp  run.bat
binaries/: AbstractShaderEngine.ilk
cached/shaders/: .as_shader_binary  default_2d_fragment.glsl.as_shader_binary  default_2d_vertex.glsl.as_shader_binary  default_fragment.glsl.as_shader_binary  default_ui_fragment.glsl.as_shader_binary  default_ui_text_fragment.glsl.as_shader_binary  default_ui_vertex.glsl.as_shader_binary  default_vertex.glsl.as_shader_binary  editor_default_frag.glsl.as_shader_binary  editor_default_vert.glsl.as_shader_binary  editor_mountain_frag.glsl.as_shader_binary  editor_sand_frag.glsl.as_shader_binary  editor_sand_vert.glsl.as_shader_binary  editor_sky_frag.glsl.as_shader_binary  empty_gray_fragment.glsl.as_shader_binary
enc_temp_folder/63c9b0ce8c23e59675e1dcd5f22413d1/: scripting_core.cpp
include/: as_array.h  as_console.h  as_defines.h  as_editor.h  as_engine.h  as_math.h  as_memory.h  as_threads.h  as_types.h  as_utility.h  defines.h  types.h
include/RayTracer/: camera.h  color.h  common.h  hittable.h  hittable_list.h  material.h  ray.h  render.h  utility.h  vec3.h
include/RayTracer/hittables/: sphere.h
include/core/: as_console.h  as_content.h  as_input.h  as_render.h  as_render_queue.h  as_serialization.h  as_shader.h  as_shader_monitor.h  as_shapes.h  as_tick.h  as_ui.h  as_window.h  engine_core.h  engine_memory.h  engine_types.h  engine_utility.h  types.h  utility.h  window_core.h  window_types.h
include/core/input/: input_types.h
include/core/scripting/: scripting.h  scripting_core.h
include/defines/: as_errors.h  as_global.h  as_keys.h
include/ray_tracer/: ray_tracer.h  ray_tracer_core.h
include/render/: display_core.h  display_types.h  multisampling.h  vulkan.h  vulkan_core.h  vulkan_create_infos.h  vulkan_engine.h
include/render/khronos/: display_egl.h  display_glfw.h  opengl_core.h  opengl_types.h
include/render/opengl/: opengl.h  opengl_core.h
include/shader/: shaderc.h  shaderc_core.h
lib/glad/: wgl.h
lib/glad/include/glad/: egl.h  gl.h  glad.h  gles2.h  vulkan.h  wgl.h
lib/glad/src/: egl.c  gl.c  glad.c  gles2.c  vulkan.c  wgl.c
lib/glfw/: CMakeLists.txt
lib/shaderc/utils/: git-sync-deps.py
lib/vulkan/: CMakeLists.txt  README.md  build.bat  build.sh
lib/vulkan/cmake/: Config.cmake.in
lib/vulkan/other/dummy_ios_armv7_symbol/: build.sh
lib/vulkan/other/dummy_ios_armv7_symbol/src/: dummy.c
lib/vulkan/sdk/ios_tvos-only/: README.txt
lib/vulkan/sdk/ios_tvos-only/MoltenVK/MoltenVK.xcframework/: Info.plist
lib/vulkan/sdk/macos-only/: VERSIONS.txt
lib/vulkan/test/: CMakeLists.txt  TestMain.cpp  build.sh
ref_code/: 23_descriptor_sets.cpp
resources/: metallic-lucy-statue-stanford-scan.fbx  stanford-bunny.mtl
resources/models/dragon/: scene.gltf
resources/models/sphere/: sphere.gltf  sphere.gltf.import
resources/objects/: bunny_model.json  default_camera.json  default_world.json  dragon_light1.json  dragon_light2.json  dragon_light3.json  dragon_model.json  dragon_model2.json  dragon_model3.json  dragon_model4.json  dragon_model5.json  dragon_model6.json  dragon_model7.json  dragon_model8.json  dragon_model9.json  dragon_shader.json  dragon_texture.json  dragon_world.json  lucy_model.json  sponza_model.json  viking_room_model.json  viking_room_model2.json  viking_room_model3.json  viking_room_shader.json  viking_room_texture.json
resources/objects/defaults/: default_box.json  default_box1.json  default_box2.json  default_camera.json  default_ground.json  default_light.json  default_shader.json  default_sphere.json  default_world.json  test_shader.json  welcome_shader.json
resources/objects/sponza/: sponza_model.json  sponza_shader_flowers.json  sponza_shader_pillar.json  sponza_shader_symbol.json  sponza_shader_vase.json  sponza_shader_wall1.json  sponza_shader_wall2.json  sponza_texture_flowers.json  sponza_texture_pillar.json  sponza_texture_symbol.json  sponza_texture_vase.json  sponza_texture_wall1.json  sponza_texture_wall2.json
resources/scenes/: default_scene.as_scene
resources/shaders/: as_common.glsl  as_sdf.glsl  as_sdf_operators.glsl  as_sdf_shapes.glsl  default_fragment.glsl  default_fragment.glsl_cache  default_fragment_shader.glsl  default_gray_fragment.glsl  default_vertex.glsl  default_vertex.glsl_cache  default_vertex_shader.glsl  empty_gray_fragment.glsl  pbr_fragment_shader.glsl  test_fragment_shader.glsl  welcome_fragment_shader.glsl
resources/shaders/common/: fragment_shader_common.glsl  shader_common.glsl
resources/shaders/core/: as_common.glsl  as_fragment_layout.glsl  as_scene_layout.glsl  as_vertex_layout.glsl
resources/shaders/core_2d/: as_2d_layout.glsl  as_ui_text_layout.glsl  default_2d_fragment.glsl  default_2d_vertex.glsl  default_ui_text_fragment.glsl
resources/shaders/editor/: editor_default_frag.glsl  editor_default_vert.glsl  editor_mountain_frag.glsl  editor_sand_frag.glsl  editor_sand_vert.glsl  editor_sky_frag.glsl
resources/shaders/sdf/: as_sdf.glsl  as_sdf_operators.glsl  as_sdf_shapes.glsl
resources/shaders/ui/: as_ui_layout.glsl  as_ui_sdf_shapes.glsl  default_ui_fragment.glsl  default_ui_vertex.glsl
src/: as_console.c  as_editor.c  as_engine.c  as_math.c  as_memory.c  as_threads.c  as_utility.c  camera.cpp  hittable_list.cpp  material.cpp  render.cpp  sphere.cpp
src/core/: as_console.c  as_content.c  as_input.c  as_render.c  as_render_queue.c  as_serialization.c  as_shader.c  as_shader_monitor.c  as_shapes.c  as_tick.c  as_ui.c  as_window.c  engine_core.cpp  engine_core_opengl.cpp  engine_core_raylib.cpp  engine_memory.cpp  engine_types.cpp  engine_utility.cpp  utility.cpp  window_core.cpp
src/core/scripting/: scripting_core.cpp
src/ray_tracer/: ray_tracer.cpp  ray_tracer_core.cpp
src/render/: display_core.cpp  vulkan.cpp  vulkan_core.cpp  vulkan_engine.cpp
src/render/khronos/: display_egl.cpp  display_glfw.cpp  opengl_core.cpp
src/render/opengl/: opengl_core.cpp
src/shader/: shaderc_core.cpp
(+1 files in other folders)
